examples/mood/tests/fixtures/construct_struct.mood
struct Foo {
  a: i32,
}

pub fn test(): i32 {
  Foo {
    a: 1_i32
  };

  1_i32
}
